--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <!-- Kolom Gambar -->
           <div class="col-md-6 text-center mb-4">
             <img
-              src="img/tentang-kami.png"
+              src="img/gambar kelompok kerja.webp"
               alt="Tentang Kami"
               class="img-fluid rounded shadow"
             />
@@ -131,7 +131,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="card team-card shadow-sm text-center">
               <img
-                src="img/orang2 (1).png"
+                src="img/hot-picture.jpg"
                 class="team-img rounded-circle mx-auto mt-4"
                 alt="Team Member 2"
               />
